absolute url for images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,37 +57,37 @@
                         <ul class="uk-tab-bottom" uk-tab>
                             <li (mouseenter)="onMouseEnter( 'name' )" class="animate__animated animate__fadeInDown">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/user.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/user.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
                             <li (mouseenter)="onMouseEnter( 'email' )" class="animate__animated animate__fadeInUp">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/email.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/email.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
                             <li (mouseenter)="onMouseEnter('dob')" class="animate__animated animate__zoomIn">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/calendar.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/calendar.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
                             <li (mouseenter)="onMouseEnter('location')" class="animate__animated animate__fadeInLeft">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/map-location.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/map-location.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
                             <li (mouseenter)="onMouseEnter( 'phone' )" class="animate__animated animate__zoomIn">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/call.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/call.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
                             <li (mouseenter)="onMouseEnter('login')" class="animate__animated animate__slideInUp">
                                 <a href="#">
-                                    <img src="/assets/icons/svg/misc/locked.svg" width="40" height="40" uk-svg>
+                                    <img src="https://raw.githubusercontent.com/acedesigns/osiris/master/docs/assets/icons/svg/misc/locked.svg" width="40" height="40" uk-svg>
                                 </a>
                             </li>
 
